# cedrina

./: .coverage  .dockerignore  .env.development  .env.production  .env.staging  .env.test  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.prod  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  TESTING.md  alembic.ini  babel.cfg  bandit_report.json  docker-compose.prod.yml  docker-compose.yml  email_confirmation_implementation.md  entrypoint.sh  init-db.sh  logging.ini  pyproject.toml  pytest.ini  pytest_asyncio.py  pytest_mock.py
alembic/: env.py
alembic/versions/: 13d2b725085f_merge_email_confirmation_and_session_.py  21b29c875b37_add_users_oauth_profiles_and_sessions_.py  684271039796_add_email_confirmation_fields_to_users.py  8f85d1d7646f_initial.py  93ecdab1abcb_merge_session_activity_tracking_and_.py  add_casbin_policies_table.py  add_email_confirmation_fields.py  add_email_confirmation_token.py  add_email_confirmed_flag.py  add_password_reset_fields_to_users.py  add_session_activity_tracking.py  dbade9aeb417_add_casbin_rule_and_policy_audit_logs_.py  ec964d9b5e69_add_email_confirmation_fields.py
docs/: PROJECT_STRUCTURE.md  README.md  environment_settings.md  permissions.md
docs/architecture/: application-architecture.md  database-design.md  project-structure.md
docs/authentication/: README.md  api_integration_guide.md  change_password_api.md  clean_architecture_implementation.md  clean_code_refactoring.md  complete_authentication_system.md  forgot_password_api.md  forgot_password_system.md  input_validation_security_fixes.md  logging_and_information_disclosure_security_fixes.md  models.md  password_encryption_security_audit.md  security_fixes.md  services.md  session_management_security_fixes.md  setup.md  testing.md
docs/configuration/: alembic_config.md  app_settings_config.md  babel_config.md  config_files_overview.md  docker_config.md  environment_files.md  makefile.md  poetry_config.md  pytest_config.md
docs/deployment/: docker.md  environments.md  production.md
docs/development/: api-docs.md  code-quality.md  setup.md  testing.md
docs/features/: authentication.md  internationalization.md  permissions.md  rate-limiting.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/permissions/: README.md  api_integration.md  configuration.md  core_concepts.md  enforcement_scenarios.md  policy_management.md  testing_validation.md  troubleshooting.md
docs/rate_limiting/: README.md  advanced_rate_limiting_system.md  disable_functionality.md  real_world_scenarios.md
docs/reference/: api-reference.md  configuration.md  troubleshooting.md
docs/security/: SECURITY_AUDIT_TODO.md
locales/: messages.pot
locales/ar/LC_MESSAGES/: messages.mo  messages.po
locales/en/LC_MESSAGES/: messages.mo  messages.po  messages.po.backup
locales/es/LC_MESSAGES/: messages.mo  messages.po
locales/fa/LC_MESSAGES/: messages.mo  messages.po
scripts/: deploy_session_security_fixes.sh
src/: main.py
src/adapters/websockets/: __init__.py
src/config/: rate_limiting.py
src/core/: application.py  circuit_breaker.py  exceptions.py  handlers.py  initialization.py  lifecycle.py  metrics.py  middleware.py  rate_limit.py  ratelimiter.py
src/core/config/: app.py  auth.py  database.py  email.py  redis.py  settings.py
src/core/dependencies/: auth.py
src/core/logging/: __init__.py
src/core/rate_limiting/: __init__.py  config.py  email_rate_limiter.py  entities.py  password_reset_service.py  services.py  value_objects.py
src/domain/entities/: __init__.py  oauth_profile.py  session.py  user.py
src/domain/events/: __init__.py  authentication_events.py  email_confirmation_events.py  password_reset_events.py
src/domain/interfaces/: __init__.py  email.py  email_confirmation.py  infrastructure.py  repositories.py  security.py  services.py  token_management.py
src/domain/rate_limiting/: __init__.py  entities.py  repositories.py  services.py  value_objects.py
src/domain/security/: error_standardization.py  logging_service.py  structured_events.py
src/domain/services/: __init__.py
src/domain/validation/: input_sanitizer.py  secure_user_agent.py  secure_username.py
src/domain/value_objects/: __init__.py  confirmation_token.py  email.py  email_confirmation_token.py  jwt_token.py  oauth_provider.py  oauth_token.py  oauth_user_info.py  password.py  rate_limit.py  reset_token.py  username.py
src/infrastructure/: database.py  redis.py
src/infrastructure/database/: __init__.py  async_db.py  (+1 more)
src/permissions/: config.py  dependencies.py  enforcer.py  model.conf  policies.py  policy.csv  redis_watcher.py
src/utils/: i18n.py  security.py
tests/: conftest.py
tests/factories/: __init__.py  oauth.py  token.py  user.py
tests/feature/: conftest.py  test_abac_with_time_based_access.py  test_access_during_emergency_override.py  test_admin_access.py  test_admin_policy_management_during_peak_load.py  test_audit_logging_for_policy_changes.py  test_audit_logging_of_policy_changes.py  test_change_password.py  test_complex_permissions.py  test_cross_department_access_with_temporary_roles.py  test_dynamic_policy_update_during_user_session.py  test_email_confirmation_flow.py  test_i18n_error_messages_for_permission_denial.py  test_logout_flow.py  test_multi_role_user_access_conflict.py  test_password_encryption_complete_journey.py  test_policy_versioning_and_rollback.py  test_rate_limit_enforcement_during_policy_update.py  test_rate_limiting_on_policy_management.py  test_temporary_access_grant_for_contractor.py  test_time_based_access_restrictions.py  test_user_access.py  test_user_access_based_on_department_and_location.py
tests/integration/: test_email_confirmation_clean_architecture.py  test_password_encryption_integration.py  test_password_reset_clean_architecture.py  test_ratelimit.py  test_security_patterns_integration.py  test_server_startup.py
tests/performance/: test_rate_limiting_performance.py
tests/unit/: test_admin_access_denial.py  test_database.py  test_health.py  test_i18n.py  test_metrics.py
tests/utils/: security_helpers.py
(+177 files in other folders)
