[tool.poetry]
name = "cedrina"
version = "0.1.0"
description = "Enterprise-grade FastAPI template for scalable REST and real-time applications"
authors = ["Elite Architect <architect@example.com>"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
gunicorn = "^23.0.0"
pydantic = { extras = ["email"], version = "^2.9.2" }
pydantic-settings = "^2.5.2"
python-dotenv = "^1.0.1"
structlog = "^24.4.0"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
aiohttp = "^3.10.10"
async-timeout = "^4.0.3"
typer = "^0.12.5"
websockets = "^13.1"
python-i18n = "^0.3.9"
Babel = "^2.16.0"
sqlmodel = "^0.0.22"
alembic = "^1.13.3"
psycopg2-binary = "^2.9.9"
redis = "^5.1.1"  # Added for Redis support

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
pytest-dotenv = "^0.5.2"
httpx = "^0.27.2"
mypy = "^1.11.2"
ruff = "^0.6.9"
black = "^24.8.0"
pre-commit = "^3.8.0"
bandit = "^1.7.10"
types-python-jose = "^3.3.4"
types-passlib = "^1.7.7"

[tool.poetry.scripts]
cedrina = "src.main:app"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["src", "tests"]
strict = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "D", "UP", "S", "B", "A", "C4", "T20", "Q", "RUF"]
ignore = ["D203", "D213"]

[tool.black]
line-length = 100
target-version = ["py312"]