[project]
name = "cedrina"
version = "0.1.0"
description = "Enterprise-grade FastAPI template for scalable REST and real-time applications"
authors = [{name = "Sam khosravian", email = "hd.khosravian@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.12"
dynamic = ["version"]

[project.scripts]
cedrina = "src.main:app"

[tool.poetry]
package-mode = false
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"  # Latest: 0.115.4 (May 2025)
uvicorn = { extras = ["standard"], version = "^0.32.0" }  # Latest: 0.32.0
gunicorn = "^23.0.0"  # Latest: 23.0.0
pydantic = { extras = ["email"], version = "^2.9.2" }  # Latest: 2.9.2
pydantic-settings = "^2.5.2"  # Latest: 2.5.2
python-dotenv = "^1.0.1"  # Latest: 1.0.1
structlog = "^24.4.0"  # Latest: 24.4.0
python-jose = { extras = ["cryptography"], version = "^3.3.0" }  # Latest: 3.3.0
passlib = { extras = ["bcrypt"], version = "^1.7.4" }  # Latest: 1.7.4
aiohttp = "^3.10.10"  # Latest: 3.10.10
async-timeout = "^4.0.3"  # Latest: 4.0.3
typer = "^0.12.5"  # Latest: 0.12.5
websockets = "^13.1"  # Latest: 13.1
python-i18n = "^0.3.9"  # Latest: 0.3.9
Babel = "^2.16.0"  # Latest: 2.16.0
sqlmodel = "^0.0.24"  # Updated to allow newer versions if available
alembic = "^1.13.3"  # Latest: 1.13.3
psycopg2-binary = "^2.9.9"  # Latest: 2.9.9
redis = "^5.1.1"  # Latest: 5.1.1
tenacity = "^9.1.2"  # Latest: 9.1.2
fastapi-limiter = "^0.1.6"  # Added for rate limiting
authlib = "^1.3.2"  # Latest: 1.3.2
cryptography = "^43.0.1"  # Latest: 43.0.1
psutil = "^5.9.8"  # Added for system metrics
casbin = "^1.7.0"  # Added for advanced access control

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"  # Latest: 8.3.3
pytest-asyncio = "^0.24.0"  # Latest: 0.24.0
pytest-cov = "^5.0.0"  # Latest: 5.0.0
pytest-dotenv = "^0.5.2"  # Latest: 0.5.2
httpx = "^0.27.2"  # Latest: 0.27.2
mypy = "^1.12.1"  # Latest: 1.12.1
ruff = "^0.7.0"  # Latest: 0.7.0
black = "^24.10.0"  # Latest: 24.10.0
pre-commit = "^3.8.0"  # Latest: 3.8.0
bandit = "^1.7.10"  # Latest: 1.7.10
types-python-jose = "^3.3.4"  # Latest: 3.3.4
types-passlib = "^1.7.7"  # Latest: 1.7.7
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core>=2.0.0"]  # Updated for Poetry 2.1.3
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["src", "tests"]
strict = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "D", "UP", "S", "B", "A", "C4", "T20", "Q", "RUF"]
ignore = ["D203", "D213"]

[tool.black]
line-length = 100
target-version = ["py312"]